# Nabd-Agent-OS

./: .gitignore  README.md  ai_coder.py  build.gradle.kts  build_log.txt  crash.txt  crash2.txt  gradle.properties  settings.gradle.kts  test_dep.gradle  test_kolor.kt
.commandcode/taste/: taste.md
.github/workflows/: nabd-build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  THIRD_PARTY.md  nabd_engine.cpp
app/src/main/cpp/runtime/: LlamaRuntimeContext.cpp  LlamaRuntimeContext.hpp
app/src/main/java/com/nabd/ai/: MainActivity.kt  NabdApplication.kt
app/src/main/java/com/nabd/ai/ui/: AvantGardeAppLayout.kt
app/src/main/java/com/newoether/agora/api/: EmbeddingClient.kt  GenerationError.kt  HttpClient.kt  LlamaChatEngine.kt  LlmProvider.kt
app/src/main/java/com/newoether/agora/model/: AttachmentMeta.kt  ChatMessage.kt  ModelId.kt
app/src/main/java/com/newoether/agora/sandbox/: SandboxManager.kt  SandboxManagerFactory.kt
app/src/main/java/com/newoether/agora/tool/: MemoryToolProvider.kt  RagToolProvider.kt  ShellToolProvider.kt  ToolProvider.kt  WebSearchToolProvider.kt
app/src/main/java/com/newoether/agora/util/: Constants.kt  PdfPageRenderer.kt  SearchResultFormatter.kt  SshClient.kt
app/src/main/res/drawable/: collapse_all_24px.xml  expand_all_24px.xml  ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: agora_strings.xml  font_certs.xml  strings.xml
config/detekt/: detekt.yml
scripts/: build_release.sh  generate_keystore.sh  verify_release.sh
(+403 files in other folders)
